--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -660,7 +660,7 @@ $menuTrans:all 0.5s linear;
   position: fixed; bottom: 0; border-radius:none !important; padding-left:0px; padding-right:0px; z-index:1030;
   .opacity{display:none; background: none repeat scroll 0 0 rgba(0, 0, 0, 0.8); height: 100%; left: 0; position: fixed; text-align: center; top: 0; width: 100%; z-index: 999; }
   .panel{background:transparent; border:none; box-shadow:none; margin: 0px; }
-  .panel-heading{padding: 0px;
+  .panel-heading{padding: 0px;height: auto;
     .panel-title{
       .re-btn{display: inline-block; background: $mlBlue; border: 0px; line-height: 25px; position: relative; text-decoration: none; font-size: 12px; height: 25px; margin: 0px 6px 0px 21px; color: $mlWhite; text-shadow: none; text-align: center;padding:0px 10px;}
       .re-btn:after{position: absolute; right: -10px; content: " "; width: 0px; height: 0px; border-style: solid; border-width: 25px 0 0px 10px; border-color: transparent transparent transparent $mlBlue; top: 0px;}
