--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -1455,4 +1455,8 @@ $menuTrans:all 0.5s linear;
     }
   }
 }
+.portfolio-main-wrap{
 
+}
+
+.moolya_app .RRT__tab.back_icon{border-radius: 50%;width: 35px;height: 35px;padding: 0px;line-height: 34px;text-align: center;}
