MOOLYA-2348 Community map list view filtes css changes

--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -121,8 +121,9 @@ h1,h2,h3,h4,h5,h6{font-family: 'DINPro-Regular';font-weight:normal;margin: 0px;l
 .community_icons{height: 45px;position: absolute; /*position:relative;*/ float:right; top: 0px;right: 10px;background-color:rgba(255,255,255,0.9);border-radius: 0px 0px 6px 6px;padding: 0px 5px 0px 5px;border: 1px solid #ccc;z-index: 3;}
 .community_icons a .ml{font-size: 19px; color: #fff; border-radius: 100%; padding: 5px; margin-right: 5px; text-shadow: none;text-shadow: none;line-height: 40px;border:solid 2px transparent;background-color: #B9C5CC; }
 .community_icons a .fa.ml{display: inherit;}
-.community_icons a.active_community .ml{border: 2px solid #ef4647;background-color: #ef4647;color: #fff;}
-.community_icons a.map_active_community .ml{border: 2px solid #273545;background:#ef4647 !important;color: #fff;}
+.community_icons a.active_community .ml{border: 2px solid #273545;background:#ef4647 !important;color: #fff;}
+/*.community_icons a.active_community .ml{border: 2px solid #ef4647;background-color: #ef4647;color: #fff;}*/
+/*.community_icons a.map_active_community .ml{}*/
 .community_icons a{text-decoration: none;}
 .ideator_mask{position: relative;width: 103px;height: 139px;background: url(../images/ideator_bg.png);top: 4px;left: 39px;}
 .ideator_mask img{border: 0px;top: 5px;left: 5px;border-radius: 50%;width: 93px;height: 93px;}
