View Charts are integrated both in admin and app is done Charts are configured in edit startup portfolio UI issues of charts are fixed

--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -1459,3 +1459,5 @@ button.close {
   position: fixed;
   top: 111px;
 }
+
+.chart_bg{background: #fff;border: 1px solid #ccc;margin-bottom: 29px;}
