--- a/client/stylesheets/css/react-big-calendar.css
+++ b/client/stylesheets/css/react-big-calendar.css
@@ -304,7 +304,7 @@ button.rbc-input::-moz-focus-inner {
 .rbc-calendar {
   box-sizing: border-box;
   height: 100%;
-  display: flex;
+  /*display: flex;  commit due to height of view less*/
   flex-direction: column;
   align-items: stretch;
 }
