--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -186,9 +186,10 @@ span.actions_switch.show_act{bottom: 0px;}
 .form_inner_block .form-group.switch_wrap{margin-bottom: 0px;}
 /*.form_inner_block .form-group.switch_wrap label:first-of-type{position: relative;top: -18px;margin-right: 10px;}*/
 .add_form_block{position: absolute;right: -16px;top: calc(50% - 16px);z-index: 1;}
-.form-group.left_al{width: 48%;margin-right: 4%;float: left;}
-.form-group.left_al:nth-of-type(4){margin-right: 0px;}
-/*.form-group.left_al:nth-of-type(5), .form-group.left_al:nth-of-type(3),.form-group.left_al:nth-of-type(7){margin-right: 0px;}*/
+.form-group.left_al{width: 48%;margin-right: 2%;float: left;}
+.form-group.right_al{width: 48%;margin-left: 2%;float: left;}
+/*.form-group.left_al:nth-of-type(4){margin-right: 0px;}
+.form-group.left_al:nth-of-type(5), .form-group.left_al:nth-of-type(3),.form-group.left_al:nth-of-type(7){margin-right: 0px;}*/
 .switch {position: relative;display: inline-block;width: 60px;height: 34px;margin-left: 10px;margin-bottom: 0px;}
 .switch:after{position:absolute;right:-10px;content:" ";width: 0px;height: 0px;border-style: solid;border-width: 17px 0 17px 10px;border-color: transparent transparent transparent #c9302c;top: 0px;}
 .switch:before{position:absolute;left:-10px;content:" ";width: 0px;height: 0px;border-style: solid;border-width: 17px 10px 17px 0px;border-color: transparent #c9302c transparent transparent;top: 0px;}
