--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -97,15 +97,6 @@ $menuTrans:all 0.5s linear;
   .ml_app_profile li:active a, .ml_app_profile li:focus a, .ml_app_profile li.focus a {background-color: #fff;box-shadow: 0 0 10px rgba(0, 0, 0, 1);outline: none;position: relative;left: 0;top: auto;/*z-index: 25;*/}
   .ml_app_profile>ol>li:active, nav>ol>li:focus, .ml_app_profile>ol>li.focus { /* Keep this to make sure only the current item appears above the disc. */z-index: 25;}
 
-  .map_profiles{
-    position: absolute; top: 40%; left: 20%;
-  img{
-    position: absolute; width: 25px; border-radius: 50%; float: left; border: #333 solid 1px; height: 25px;
-  }
-    .ml{
-      position: absolute; z-index: 2; background: #333; color: #FFF; text-shadow: none; border-radius: 50%; right: -29px; font-size: 12px; width: 10px; height: 10px; border: #333 solid 1px;
-    }
-  }
 
   .ml_app_profile.profile_open>ol>li:nth-of-type(1) {right: 203px;top: 7px;}
   .ml_app_profile.profile_open>ol>li:nth-of-type(2) {right: 187px;top: 47px;}
@@ -1531,41 +1522,68 @@ $menuTrans:all 0.5s linear;
   }
 }
 .bugReport{
-  right: -250px; position: fixed; z-index: 9999; transition: .5s linear; top: 37%;
+  right: -350px; position: fixed; z-index: 9999; transition: .5s linear; top: 37%;
   &.open{
     right: 0;
-    .bug_button:hover{color:$mlBlack;right:244px;}
+    .bug_button:hover{color:$mlBlack;right:340px;}
   }
   h3{
     font-size: 16px; text-align: center; color: #fff; border-radius: 4px; padding: 15px 5px; text-shadow: none;
   }
-  .ml_btn{text-align: center;margin-top: 10px;
+  .ml_btn{/*text-align: center;*/margin-top: 10px;
     .save_btn{background: $mlGray;color: $mlBlue;
       &:after{border-color: transparent transparent transparent $mlGray;}
       &:before{border-color: transparent $mlGray transparent transparent;}
     }
   }
-  .form-control{
+  .form-control{color: $mlWhite;padding-top: 0px;height: 85px;
     &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-      color: $mlWhite;
+      color: #9c2929;
     }
     &::-moz-placeholder { /* Firefox 19+ */
-      color: $mlWhite;
+      color: #9c2929;
     }
     &:-ms-input-placeholder { /* IE 10+ */
-      color: $mlWhite;
+      color: #9c2929;
     }
     &:-moz-placeholder { /* Firefox 18- */
-      color: $mlWhite;
+      color: #9c2929;
     }
   }
   .bug_body{
-    width: 250px; background: $mlRed; padding: 10px; z-index: 999; float: right;
+    width: 350px; background: $mlRed; padding: 5px 10px 10px 10px; z-index: 999; float: right;border-radius: 0px 0px 0px 10px;
   }
-  .bug_button{display: inline-block; background: $mlRed !important; border: 0px; line-height: 27px; position: absolute; text-decoration: none; font-size: 18px; height: 30px !important; min-width: 30px; margin: 0px 6px 0px 21px; color: $mlBlack; text-shadow: none; text-align: center; z-index:2;right:244px;}
-  .bug_button:hover{color:$mlBlack;right:240px;}
+  .bug_button{display: inline-block; background: $mlRed !important; border: 0px; line-height: 27px; position: absolute; text-decoration: none; font-size: 18px; height: 30px !important; min-width: 30px; margin: 0px 6px 0px 21px; color: $mlBlack; text-shadow: none; text-align: center; z-index:2;right:340px;}
+  .bug_button:hover{color:$mlBlack;right:344px;}
   .bug_button:focus{color:$mlBlack;}
   .bug_button:before{position:absolute;left:-10px;content:" ";width: 0px;height: 0px;border-style: solid;border-width: 15px 10px 15px 0px;border-color: transparent $mlRed transparent transparent;top: 0px;}
 
 }
 
+.map_profiles{
+  position: absolute; top: 40%; left: 20%;
+  img{
+    position: absolute; width: 25px; border-radius: 50%; float: left; border: #333 solid 1px; height: 25px;
+  }
+  .ml{
+    position: absolute; z-index: 2; background: #333; color: #fff; text-shadow: none; border-radius: 50%; right: -29px; font-size: 12px; width: 10px; height: 10px; border: #333 solid 1px;
+  }
+}
+.content_block{
+  height: 245px;
+  h3{
+    margin-top: 7px; position:static; border-radius:0; border-bottom: #03080c solid 1px;
+  }
+  ul{
+    position: absolute; bottom: 0; text-align: center; width: 100%; margin: 0; text-shadow: none; padding: 5px 0px; border-top:#758290 solid 1px; background:$mlBlue;
+    li{
+      display: inline-block;width: 30%;
+      .ml{
+        font-size: 12px; line-height: normal; background: $mlRed; border-radius: 50%; padding: 3px; color: $mlWhite; position: relative; z-index: 1;
+      }
+      b{
+        font-size: 9px; background: $mlWhite; color: $mlBlue; font-weight: normal; padding: 0px 8px; border-radius: 0 4px 4px 0px; margin-left: -8px; margin-top: 5px; position: absolute;
+      }
+    }
+  }
+}
