--- a/client/stylesheets/css/react-bootstrap-table.css
+++ b/client/stylesheets/css/react-bootstrap-table.css
@@ -5,7 +5,7 @@
   margin-bottom: 0;
 }
 
-.react-bs-table {
+.react-bs-table-bordered {
   border: 1px solid #ddd;
   border-radius: 5px;
 }
@@ -22,16 +22,12 @@
   text-overflow: ellipsis;
 }
 
-.react-bs-table {
-  margin: 5px 10px 5px 10px;
-}
-
 .react-bs-table-pagination {
-  margin: 10px;
+  margin-top: 10px;
 }
 
 .react-bs-table-tool-bar {
-  margin: 10px 10px 0 10px;
+  margin-bottom: 5px;
 }
 
 .react-bs-container-header {
@@ -45,13 +41,29 @@
   width: 100%;
 }
 
+.react-bootstrap-table-page-btns-ul {
+  float: right;
+  /* override the margin-top defined in .pagination class in bootstrap. */
+  margin-top: 0;
+}
+
 .react-bs-table .table-bordered {
     border: 0;
+    outline: none !important;
 }
 
 .react-bs-table .table-bordered > thead > tr > th,
 .react-bs-table .table-bordered > thead > tr > td {
   border-bottom-width: 2px;
+}
+
+.react-bs-table .table-bordered > tbody > tr > td {
+  outline: none !important;
+}
+
+.react-bs-table .table-bordered > tbody > tr > td.default-focus-cell {
+  outline: 3px solid cornflowerblue !important;
+  outline-offset: -1px;
 }
 
 .react-bs-table .table-bordered > tfoot > tr > th,
@@ -159,6 +171,48 @@
   text-align: center;
 }
 
+
+.ReactModal__Overlay {
+  -webkit-perspective: 600;
+  perspective: 600;
+  opacity: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 101;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+  transition: opacity 150ms ease-out;
+}
+
+.ReactModal__Content {
+  -webkit-transform: scale(0.5) rotateX(-30deg);
+  transform: scale(0.5) rotateX(-30deg);
+}
+
+.ReactModal__Content--after-open {
+  -webkit-transform: scale(1) rotateX(0deg);
+  transform: scale(1) rotateX(0deg);
+  transition: all 150ms ease-in;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+}
+
+.ReactModal__Content--before-close {
+  -webkit-transform: scale(0.5) rotateX(30deg);
+  transform: scale(0.5) rotateX(30deg);
+  transition: all 150ms ease-in;
+}
+
+.ReactModal__Content.modal-dialog {
+  border: none;
+  background-color: transparent;
+}
+
 /*error tip style*/
 .animated {
   animation-fill-mode: both;
@@ -171,6 +225,10 @@
 
 .animated.shake{
   animation-duration: .3s;
+}
+
+td.react-bs-table-expand-cell {
+    cursor: pointer;
 }
 
 @keyframes shake {
