--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -936,7 +936,7 @@ button:focus{outline: 0;}
 
 .comment-btn-group{margin:20px 0px 40px; position: relative; text-align: center;}
 
-.comments-container {/*margin: 60px auto 15px; width: 100%;*/max-height: 320px;overflow-y: auto;overflow-x: hidden; padding-right: 10px;}
+.comments-container {/*margin: 60px auto 15px; width: 100%;*/height: 320px;overflow-y: auto;overflow-x: hidden; padding-right: 10px;}
 .comments-container h1 {font-size: 36px; color: #283035; font-weight: 400; }
 .comments-container h1 a {font-size: 18px; font-weight: 700; }
 
