--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -887,6 +887,8 @@ p{margin-top:10px;}
 .invitation .input_types {margin-right:2px;}
 .popover-lg{
   width: 500px;
+  height: 320px;
+  overflow-y: auto;
   .reply-list{
     padding:0px;
     .comment-box{
@@ -1427,7 +1429,7 @@ p{margin-top:10px;}
         line-height: 0px;
       }
     }
-   
+
   }
 }
 .wrap_left{width: calc(100% - 86px);float: left;}
