--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -1072,11 +1072,13 @@ textarea.comment-input-box{border: 2px solid #ddd; border-radius: 4px; margin-bo
 .upload-image img{width:100%}
 
 .see-more a{color:#fff;font-size:12px;cursor:pointer;text-decoration:none;background:#273545;padding:4px 6px;border-radius:4px;text-shadow:none;font-weight: normal;}
-.library-wrap .thumbnail{float:left;width:120px;height:120px;margin:4px 10px 4px 4px;position:relative;padding:0; padding-top: 20px;}
+.library-wrap .thumbnail{float:left;width:120px;height:100px;margin:4px 10px 4px 4px;position:relative;padding:0; padding-top: 0px;}
+.library-wrap .thumbnail img{width: 100%;height: 100%;}
 .library-wrap .thumbnail .title{position:absolute;background:#273545;color:#fff;text-align:center;font-size:13px;bottom:0;width:100%;border-radius:0 0 4px 4px;text-shadow:none;text-overflow:ellipsis;white-space:nowrap;overflow:hidden;padding:0 5px;line-height:25px}
-.library-wrap .thumbnail .fa.fa-lock{position:absolute;right:-6px;top:-6px;color:#fff;background:#ef4647;width:25px;height:25px;text-align:center;line-height:25px;border-radius:50%;cursor:pointer}
-.library-wrap .thumbnail .fa.fa-unlock{position:absolute;right:-6px;top:-6px;color:#fff;background:#ef4647;width:25px;height:25px;text-align:center;line-height:25px;border-radius:50%;cursor:pointer}
+.library-wrap .thumbnail .fa.fa-lock{position:absolute;left:-6px;top:-6px;color:#fff;background:#ef4647;width:25px;height:25px;text-align:center;line-height:25px;border-radius:50%;cursor:pointer}
+.library-wrap .thumbnail .fa.fa-unlock{position:absolute;left:-6px;top:-6px;color:#fff;background:#ef4647;width:25px;height:25px;text-align:center;line-height:25px;border-radius:50%;cursor:pointer}
 .library-wrap .thumbnail .fa.fa-trash-o{position:absolute;right:-6px;top:-6px;color:#fff;background:#ef4647;width:25px;height:25px;text-align:center;line-height:25px;border-radius:50%;cursor:pointer}
+.library-wrap .panel-body{height: 140px;overflow: auto;}
 .library-wrap-details .fa.fa-lock{position:absolute;left:0;top:0;color:#fff;background:#ef4647;width:25px;height:25px;text-align:center;line-height:25px;border-radius:50%;cursor:pointer}
 .medium-popover{ width:350px; padding: 20px; max-height: 300px; overflow-y: auto; }
 .rating-lockicon{margin-right: 5px; top: 29px; background: #273545; width: 25px; height: 25px; color: #fff; text-align: center; line-height: 25px; text-shadow: none; border-radius: 50%; float: right; }
