--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -1699,3 +1699,27 @@ p{margin-top:10px;}
   line-height: 25px;
   border-radius: 50%;
   cursor: pointer;}
+
+
+
+
+.popover_thumbnail{
+  max-height: 120px;
+  overflow: auto;
+  .thumbnail{
+    width: 100px;
+    height: 100px;
+    float: left;
+  }
+  img{
+    max-width:100%;
+    height: 80% !important;
+  }
+  .title{
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 80px;
+    overflow: hidden;
+    position: absolute;
+  }
+}
