--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -1723,3 +1723,37 @@ p{margin-top:10px;}
     position: absolute;
   }
 }
+
+.show_details{
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  background: #b9c5cc;
+  margin-top: -20px;
+  border-radius: 4px;
+  font-size: 12px;
+  overflow: auto;
+
+  .list-group-item{border-left: 0px;border-right: 0px;border-radius: 0px !important;padding:5px 0px;
+    &:first-child{text-align:center;  }
+    &:last-child{border-bottom:0px;}
+    b{
+      text-overflow: ellipsis; width: 25px; overflow: hidden; display: inline-block; white-space: nowrap;
+    }
+    .task_with{padding:0px 5px;float:left;
+      img{
+        width: 20px;
+        border-radius: 50%;
+        height: 20px;
+      }
+      span{padding: 5px; background:$mlGray; color: $mlBlue; border-radius: 100%;}
+    }
+    .task_status{ font-size:10px;   float: right;width: 45px; height: 20px; border-radius: 5px; text-align: center; line-height: 20px; margin-right: 5px; background: #ef4647; color: #fff; text-shadow: none;
+      img{
+        width: 20px;
+      }
+      span{color: #fff;text-shadow: none;font-size: 12px;}
+
+    }
+  }
+}
