--- a/client/stylesheets/css/fonts.css
+++ b/client/stylesheets/css/fonts.css
@@ -46,3 +46,13 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'mymoolya-icons';
+  src:  url('fonts/mymoolya-icons.eot?ixfm1q');
+  src:  url('fonts/mymoolya-icons.eot?ixfm1q#iefix') format('embedded-opentype'),
+  url('fonts/mymoolya-icons.ttf?ixfm1q') format('truetype'),
+  url('fonts/mymoolya-icons.woff?ixfm1q') format('woff'),
+  url('fonts/mymoolya-icons.svg?ixfm1q#mymoolya-icons') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
