--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -92,7 +92,11 @@ $menuTrans:all 0.5s linear;
   .ml_app_profile ol, .ml_app_profile li {margin: 0;padding: 0;list-style-type: none;}
   .ml_app_profile li {position: absolute;}
   .ml_app_profile li, .ml_app_profile a {display: block;box-sizing: border-box;/*position: absolute;*//*position: relative;*/top: -5em;right: -5em;/*border: 1px dotted #f00;*/transition: all 0.2s ease-in;}
-  .ml_app_profile a {-webkit-border-radius: 50%;-moz-border-radius: 50%;border: 2px solid #fff;width: 35px;height: 35px;overflow: hidden;text-align: center;font-size: 22px;/*box-shadow: 0 0 10px rgba(50, 50, 50, 0.75);*/color: #000;background-color: #ffc20e;text-decoration: none;outline: none;}
+  .ml_app_profile a {-webkit-border-radius: 50%;-moz-border-radius: 50%;border: 2px solid #fff;width: 35px;height: 35px;overflow: hidden;text-align: center;font-size: 22px;/*box-shadow: 0 0 10px rgba(50, 50, 50, 0.75);*/color: #000;background-color: #ffc20e;text-decoration: none;outline: none;
+    .ml{
+      display: block; margin-top: 4px; font-size: 22px;font-weight:bold;color:$mlBlue;
+    }
+  }
   .ml_app_profile>ol>li, nav>ol>li>a { /* So the first tier sits on top of the second tier disk */z-index: 10;}
   .ml_app_profile li:active a, .ml_app_profile li:focus a, .ml_app_profile li.focus a {background-color: #fff;box-shadow: 0 0 10px rgba(0, 0, 0, 1);outline: none;position: relative;left: 0;top: auto;/*z-index: 25;*/}
   .ml_app_profile>ol>li:active, nav>ol>li:focus, .ml_app_profile>ol>li.focus { /* Keep this to make sure only the current item appears above the disc. */z-index: 25;}
@@ -104,7 +108,8 @@ $menuTrans:all 0.5s linear;
   .ml_app_profile.profile_open>ol>li:nth-of-type(4) {right: 131px;top: 109px;}
   .ml_app_profile.profile_open>ol>li:nth-of-type(5) {right: 93px;top: 132px;}
   .ml_app_profile.profile_open>ol>li:nth-of-type(6) {right: 51px;top: 147px;}
-  .ml_app_profile.profile_open>ol>li:nth-of-type(7) {right: 7px;top: 157px;}
+  .ml_app_profile.profile_open>ol>li:nth-of-type(7) {right: 7px;top: 157px; }
+  .ml_app_profile.profile_open>ol>li .my-ml-exit_or_logoff{ margin: 7px 0 0 4px; font-size: 18px; }
 
   .header_search{/* position: absolute;right: 90px; */}
   .notification{/* position: absolute;right: 55px;float:right */margin-right: 55px;margin-left:10px;}
