--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -1883,7 +1883,7 @@ p{margin-top:10px;}
     }
   }
 }
-profile_context{position: relative;
+.profile_context{position: relative;
   background: #FFE144;
   border-radius: 50%;
   right: -14px;
