--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -690,10 +690,10 @@ button:focus{outline: 0;}
 .react-bs-table-search-form input[type="text"]::-moz-placeholder { /* Firefox 19+ */color: transparent;}
 .react-bs-table-search-form input[type="text"]:-ms-input-placeholder { /* IE 10+ */color: transparent;}
 .react-bs-table-search-form input[type="text"]:-moz-placeholder { /* Firefox 18- */color: transparent;}
-.react-bs-table-search-form input[type="text"] {border: none; background: url(../images/search_icon.png) 2px center no-repeat; z-index: 1; width: 25px; height: 25px; transition: all .25s ease-in .25s; color: transparent; line-height: 25px; float: right;margin-top: -10px;}
+.react-bs-table-search-form input[type="text"] {border: none; background: url(../images/search_icon_red.png) 2px center no-repeat; z-index: 1; width: 25px; height: 25px; transition: all .25s ease-in .25s; color: transparent; line-height: 25px; float: right;margin-top: -10px;}
 .react-bs-table-search-form input[type="text"]:hover {cursor: pointer; }
 .react-bs-table-search-form input[type="text"]:hover:focus {cursor: text; }
-.react-bs-table-search-form input[type="text"]:focus {width: 200px; padding: 0 10px 0 30px; outline: none; font-size: 14px; color: black; background: url(../images/search_icon.png) 2px center no-repeat ; color: #000; }
+.react-bs-table-search-form input[type="text"]:focus {width: 200px; padding: 0 10px 0 30px; outline: none; font-size: 14px; color: black; background: url(../images/search_icon_red.png) 2px center no-repeat ; color: #000; }
 
 .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control{background-color: transparent;}
 
