--- a/client/stylesheets/login.css
+++ b/client/stylesheets/login.css
@@ -54,3 +54,15 @@
   .login_bg video{display: none;}
   .video_bg{background-image: url("../images/video_bg2.png");background-size: cover;background-position: center center;display: block;position: fixed;top: 0px;left: 0px;width: 100%;height: 100%;background-repeat: no-repeat;}
 }
+
+video::-internal-media-controls-download-button {
+  display:none;
+}
+
+video::-webkit-media-controls-enclosure {
+  overflow:hidden;
+}
+
+video::-webkit-media-controls-panel {
+  width: calc(100% + 30px); /* Adjust as needed */
+}
