--- a/client/stylesheets/login.css
+++ b/client/stylesheets/login.css
@@ -64,5 +64,5 @@ video::-webkit-media-controls-enclosure {
 }
 
 video::-webkit-media-controls-panel {
-  width: calc(100% + 30px); /* Adjust as needed */
+  width: calc(100% + 30px);
 }
